kubernetes_demos/mypod.yaml
# yaml file to create pod
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod
  labels:
    app: demo-app
    dept: dev
spec:
  containers:
    - name: demo-container
      image: nginx:latest
      ports:
        - containerPort: 80
    - name: sidecar-container
      image: hello-world
