kubernetes_demos/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: inginx-ingress
spec:
  rules:
    - host: django-demo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 8000
